--- a/CSS/layout/waterfalls_flow/index_css.html
+++ b/CSS/layout/waterfalls_flow/index_css.html
@@ -45,7 +45,7 @@
 			<p>品质毫不马虎的棉质面料，春夏贴身舒适清爽让衣服更耐穿。</p>
 		</div> -->
 	</div>
-	<script type="text/javascript" src="../../jquery-3.1.0.min.js"></script>
+	<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="http://rapapi.org/rap.plugin.js?projectId=19339"></script>
 	<script type="text/javascript">
 		$(function(){
