--- a/CSS/layout/holy_grail_layout/index.html
+++ b/CSS/layout/holy_grail_layout/index.html
@@ -45,10 +45,10 @@
 <body>
 	<header>Header内容区</header>
 	<div class="container">
-		<div class="middle column">中间弹性区<</div>
-		<div class="left column">左边栏<</div>
-		<div class="right column">右边栏<</div>
+		<div class="middle column">中间弹性区</div>
+		<div class="left column">左边栏</div>
+		<div class="right column">右边栏</div>
 	</div>
-	<footer>Footer内容区<</footer>
+	<footer>Footer内容区</footer>
 </body>
 </html>
